progressbar-sample-position-add

--- a/assets/admin.css
+++ b/assets/admin.css
@@ -19,6 +19,9 @@
     box-shadow: 0 10px 30px rgba(102, 126, 234, 0.3);
 }
 
+#setting-error-settings_updated p {
+    color: black;
+}
 .brp-header-content h1 {
     margin: 0 0 10px 0;
     font-size: 2.5em;
